minitrace-macro/tests/trace/ui/err/018-has-duplicate-name.stderr
error: `name` provided twice
 --> tests/trace/ui/err/018-has-duplicate-name.rs:3:51
  |
3 | #[trace(name = "test_span", enter_on_poll = true, name = "not_this")]
  |                                                   ^^^^
